--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,93 @@ a {
     color: #000;
     text-decoration: none;
 }
+
+
+/* ----Cover---- */
+.cover{
+    width: 100%;
+}
+.cover .content-cover {
+    width: 100%;
+    min-height: 100vh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 40px;
+}
+.cover .content-sg {
+    min-height: auto;
+    padding: 150px 20px;
+}
+.content-cover .carousel-cover {
+    width: 100%;
+}
+    .carousel-cover .card-cover {
+        width: 100%;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 100px;
+        padding: 0px 10%;
+    }
+    .carousel-cover .card-cover .text-cover {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .carousel-cover .card-cover .text-cover .title-cover {
+        font-size: 60px;
+        font-weight: 700;
+        color: var(--colorWhite);
+        margin-bottom: 20px;
+    }
+    .carousel-cover .card-cover .text-cover .subtitle-cover {
+        max-width: 700px;
+        font-size: 20px;
+        color: var(--colorWhite);
+    }
+    .carousel-cover .card-cover .bot-cover {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+    }
+    .carousel-cover .card-cover .bot-cover .link-cover {
+        font-size: 15px;
+        font-weight: 600;
+        color: var(--colorWhite);
+        text-decoration: underline;
+    }
+    .carousel-cover .owl-nav.disabled {
+        display: inline-flex;
+    } 
+    .carousel-cover .owl-prev,
+    .carousel-cover .owl-next {
+        background-color: transparent !important;
+        position: absolute;
+        top: 400px;
+        transition: 0.3s;
+    }
+    .carousel-cover .owl-next {
+        right: 120px;
+    }
+    .carousel-cover .owl-prev {
+        right: 170px;
+    }
+    .carousel-cover .owl-prev span,
+    .carousel-cover .owl-next span {
+        font-size: 30px;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: 2px solid var(--color_secundario);
+        color: var(--color_secundario) !important;
+        border-radius: 50%;
+        transition: 0.5s;
+        padding-bottom: 5px;
+    }
