--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --colorBlack: #000;
     --colorBorde: rgb(233, 233, 233);
     --colorTexto: #7C7C80;
-    --hoverBoton: #2988bf;
+    --hoverBoton: #F4C65E;
     --fondoGris: #F4F4F4;
     --fondoDark: #6A6B6E;
 }
@@ -172,6 +172,9 @@ a {
     .content-bot .navigator .link-active {
         border-bottom: 8px solid var(--colorWhite);
     }
+    .content-bot .navigator .link-navi:hover {
+        font-weight: 600;
+    }
     .search-header {
         width: 300px;
         display: flex;
@@ -188,8 +191,7 @@ a {
     .search-header:hover input[type="search"] {
         opacity: 0;
         width: 100%;
-    }
-    .search-header:hover i {
+        cursor: pointer;
     }
     .search-header input[type="search"] {
         width: 200px;
@@ -255,7 +257,7 @@ a {
     }
         .card-cover .content-card {
             width: 100%;
-            max-width: 1150px;
+            max-width: 1200px;
             margin: 0 auto;
             margin-top: 133px;
         }
@@ -266,7 +268,7 @@ a {
                 flex-direction: column;
                 align-items: flex-start;
                 padding: 50px 100px 50px 100px;
-                background-color: var(--colorWhite);
+                background-color: #ffffffd3;
             }
             .pos-card .content-card .box-cover .subtitle-box {
                 font-size: 30px;
@@ -293,44 +295,47 @@ a {
                 transition: 0.3s;
             }
             .pos-card .content-card .box-cover .btn-box:hover {
-                background-color: var(--colorSecundario);
+                background-color: var(--hoverBoton);
             }
     .carousel-cover .owl-nav.disabled {
         display: inline-flex;
     } 
     .carousel-cover .owl-prev,
     .carousel-cover .owl-next {
-        background-color: transparent !important;
+        width: 46px;
+        height: 46px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffffff46 !important;
         position: absolute;
         top: 278px;
         transition: 0.3s;
     }
     .carousel-cover .owl-next {
-        right: 40px;
+        right: 120px;
     }
     .carousel-cover .owl-prev {
-        left: 40px;
+        left: 120px;
     }
     .carousel-cover .owl-prev span,
     .carousel-cover .owl-next span {
-        font-size: 50px;
-        width: 40px;
-        height: 40px;
+        font-size: 35px;
+        width: 25px;
+        height: 25px;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: var(--colorWhite);
-        border: 3px solid #ffffffaf !important;
         color: var(--colorTexto) !important;
         border-radius: 50%;
-        transition: 0.3s;
-        padding-bottom: 10px;
+        transition: 0.8s;
+        padding-bottom: 5px;
     }
-    .carousel-cover .owl-prev span:hover,
-    .carousel-cover .owl-next span:hover {
-        background-color: var(--colorSecundario);
-        color: var(--colorWhite)!important;
-        border: none !important;
+    .carousel-cover .owl-prev:hover,
+    .carousel-cover .owl-next:hover {
+        transform: scale(1.3);
     }
 .content-cover .pos-cover {
     width: 100%;
@@ -449,8 +454,9 @@ background: linear-gradient(180deg, rgba(244,244,244,1) 22%, rgba(250,250,250,1)
         transition: 0.3s;
     } 
     .row-cards .card-serv .text-card .btn-card:hover {
-        background-color: var(--colorPrincipal);
+        background-color: var(--hoverBoton);
         color: var(--colorWhite);
+        border: 1px solid var(--hoverBoton);
     }
     /* ----Row-vent------ */
 .content-if .row-vent {
@@ -619,7 +625,7 @@ background: linear-gradient(180deg, rgba(244,244,244,1) 22%, rgba(250,250,250,1)
             border: none;
         }
         .form-contact .col-form .bot-form button:hover {
-            background-color: var(--colorSecundario);
+            background-color: var(--hoverBoton);
         }
 /* ----Row-vis----- */
 .content-if .head-if {
