--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ a {
         gap: 20px;
     }
     .contact-header .item-contact .icon-item i {
-        font-size: 20px;
+        font-size: 13.5px;
         color: var(--colorPrincipal);
     }
     .contact-header .item-contact .text-contact {
@@ -136,7 +136,7 @@ a {
     }
     .contact-header .item-contact .text-contact .title-contact {
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 800;
         color: var(--colorBlack);
     }
     .contact-header .item-contact .text-contact p {
@@ -159,21 +159,21 @@ a {
     .content-bot .navigator {
         display: flex;
         align-items: center;
-        gap: 10px;
     }
     .content-bot .navigator .link-navi {
-        font-size: 17px;
+        font-size: 18px;
         color: var(--colorWhite);
-        padding: 13px 40px 15px 40px;
+        padding: 15px 40px 15px 40px;
         border-bottom: 8px solid transparent;
         margin-bottom: -8px;
         z-index: 99;
     }
     .content-bot .navigator .link-active {
         border-bottom: 8px solid var(--colorWhite);
+        font-weight: 700;
     }
     .content-bot .navigator .link-navi:hover {
-        font-weight: 600;
+        font-weight: 700;
     }
     .search-header {
         width: 300px;
@@ -183,6 +183,7 @@ a {
         position: relative;
     }
     .search-header i {
+        font-size: 23px;
         position: relative;
         margin-right: 10px;
         color: var(--colorWhite);
@@ -247,7 +248,7 @@ a {
         background-image: url(../img/conference.jpg);
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: center;
+        background-position: right;
     }
     .carousel-cover .card-cover .pos-card {
         width: 100%;
@@ -271,9 +272,9 @@ a {
             }
             .pos-card .content-card .box-cover .subtitle-box {
                 font-size: 30px;
-                font-weight: 400;   
+                font-weight: 300;   
                 color: var(--colorBlack);    
-                margin-bottom: 10px;     
+                margin-bottom: 12px;     
             }
             .pos-card .content-card .box-cover .subtitle-box .bold-box {
                 font-size: 42px;
@@ -282,7 +283,7 @@ a {
             .pos-card .content-card .box-cover p {
                 font-size: 16px;      
                 color: var(--colorBlack); 
-                margin-bottom: 50px;      
+                margin-bottom: 35px;      
             }
             .pos-card .content-card .box-cover .btn-box {
                 font-size: 18px;   
@@ -352,7 +353,7 @@ a {
     }
     .pos-cover .text-cover .title-cover {
         font-size: 26px;
-        font-weight: 400;
+        font-weight: 300;
         color: var(--colorBlack);
         margin-bottom: 20px;
     }
@@ -361,7 +362,7 @@ a {
         font-weight: 700;
     }
     .pos-cover .text-cover p {
-        font-size: 16px;
+        font-size: 15px;
         color: var(--colorBlack);
     }
 
@@ -372,7 +373,7 @@ a {
     padding: 0px 50px;
 }
 .if-top {
-    margin-top: -120px;
+    margin-top: -100px;
     position: relative;
     z-index: 99;
 }
@@ -402,8 +403,8 @@ background: linear-gradient(180deg, rgba(244,244,244,1) 22%, rgba(250,250,250,1)
 }
 .content-if .row-cards {
     width: 100%;
+    max-width: 1310px;
     margin: auto;
-    padding: 0px 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 25px;
@@ -427,7 +428,7 @@ background: linear-gradient(180deg, rgba(244,244,244,1) 22%, rgba(250,250,250,1)
     .row-cards .card-serv .text-card {
         width: 100%;
         height: 100%;
-        padding: 50px;
+        padding: 50px 85px 36px 85px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -638,12 +639,13 @@ background: linear-gradient(180deg, rgba(244,244,244,1) 22%, rgba(250,250,250,1)
 }
 .content-if .head-if .subtitle-sm {
     font-size: 26px;
-    font-weight: 700;
+    font-weight: 800;
     color: var(--colorBlack);
     margin-bottom: 10px;
 }
 .content-if .head-if .title-sm {
     font-size: 16px;
+    font-weight: 500;
     color: var(--colorBlack);
 }
 .content-if .row-vis {
@@ -692,7 +694,7 @@ background: linear-gradient(180deg, rgba(244,244,244,1) 22%, rgba(250,250,250,1)
         text-align: center;
     }
     .row-vis .item-vis .text-vis p {
-        font-size: 18px;
+        font-size: 16px;
         color: var(--colorBlack);
     }
 /* -----Row-list---- */
